# Highlighted_PDF_2_Anki_FlashCards

./: README.md  pyproject.toml  requirements.txt
src/H_PDF_2_Anki_FCards/: H_PDF_2_Anki_FCards.py  RUN.py  __init__.py
src/Highlighted_PDF_2_Anki_FlashCards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
